# llm-fine-tuning-pipeline

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/domains/: legal.yaml
configs/evaluation/: domain_benchmarks.yaml
configs/training/: instruction_tune.yaml  lora_adapt.yaml  test_config.yaml
docker/: Dockerfile
scripts/: build_corpus.py  evaluate_domain.py  extract_terminology.py  generate_synthetic.py  run_pipeline.py  train_domain_model.py
src/adaptation/curriculum/: data_mixer.py
src/adaptation/stages/: instruction_tune.py
src/adaptation/strategies/: lora_adapt.py
src/config/: settings.py
src/corpus/quality/: deduplication.py  filters.py
src/corpus/synthetic/: instruction_generator.py  qa_generator.py  quality_filter.py
src/corpus/terminology/: extractor.py
src/data/formatters/: domain_chat.py
src/evaluation/: base.py
src/models/: loader.py
tests/: conftest.py
tests/integration/: test_corpus_pipeline.py  test_eval_pipeline.py  test_synthetic_pipeline.py
tests/unit/: test_cli_scripts.py  test_config.py  test_data_mixer.py  test_deduplication.py  test_eval_base.py  test_eval_benchmarks.py  test_eval_retention.py  test_eval_terminology.py  test_filters.py  test_formatters.py  test_general_knowledge.py  test_instruction_tune.py  test_loaders.py  test_lora_adapt.py  test_model_loader.py  test_smoke.py  test_synthetic_instructions.py  test_synthetic_qa.py  test_synthetic_quality.py  test_terminology.py  test_tokenizer.py
(+9 files in other folders)
